services/logging/overlays/prod/patches/promtail-metrics.yml
apiVersion: v1
kind: Service
metadata:
  name: promtail-metrics
  namespace: logging
  labels:
    app: promtail
spec:
  selector:
    app: promtail
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: logging
  labels:
    app: promtail
