services/logging/overlays/prod/patches/promtail-service-monitor.yml
apiVersion: v1
kind: Service
metadata:
  name: promtail-metrics
  namespace: logging
spec:
  selector:
    app: promtail
    app.kubernetes.io/instance: promtail
