services/logging/overlays/prod/patches/loki-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loki
  namespace: logging
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: logging
    - namespaceSelector:
        matchLabels:
          name: monitoring
  - ports:
    - port: 3100
  podSelector:
    matchLabels:
      app: loki
      app.kubernetes.io/name: logging
      name: loki
      release: loki
  policyTypes:
  - Ingress
